<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <ImageButton
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@null"
            android:contentDescription="@string/menu"
            android:scaleType="centerInside"
            android:src="@drawable/menu"
            android:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="@dimen/_30ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/signUpMsg"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/grayBorder"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/white"
            android:elevation="@dimen/_2sdp"
            tools:targetApi="lollipop"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/userNameET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/UserName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_13sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:selectAllOnFocus="true"
                android:textColor="@color/grayBorder"
                android:textColorHint="@color/grayBorder"
                android:textCursorDrawable="@color/Mix"
                android:textSize="@dimen/_14ssp"
                android:paddingLeft="@dimen/_13sdp"
                android:paddingRight="@dimen/_10sdp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:background="@color/white"
            android:elevation="@dimen/_1sdp"
            tools:targetApi="lollipop"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/emailAddressET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_13sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:selectAllOnFocus="true"
                android:textColor="@color/grayBorder"
                android:textColorHint="@color/grayBorder"
                android:textCursorDrawable="@color/Mix"
                android:textSize="@dimen/_14ssp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingLeft="@dimen/_13sdp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:background="@color/white"
            android:elevation="@dimen/_1sdp"
            tools:targetApi="lollipop"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/prompt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_13sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:selectAllOnFocus="true"
                android:textColor="@color/grayBorder"
                android:textColorHint="@color/grayBorder"
                android:textCursorDrawable="@color/Mix"
                android:textSize="@dimen/_14ssp"
                android:paddingLeft="@dimen/_13sdp"
                android:paddingRight="@dimen/_10sdp" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_1sdp"
            android:background="@color/white"
            android:weightSum="1">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_weight=".5"
                android:background="@color/white"
                android:elevation="@dimen/_2sdp"
                android:layout_gravity="center"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/countryTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableEnd="@drawable/down_arrow"
                    android:drawableTint="@color/grayBorder"
                    android:hint="@string/country"
                    android:paddingStart="@dimen/_13sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/grayBorder"
                    android:textColorHint="@color/grayBorder"
                    android:textCursorDrawable="@color/Mix"
                    android:textSize="@dimen/_14ssp"
                    tools:targetApi="m"
                    android:drawableRight="@drawable/down_arrow"
                    android:paddingLeft="@dimen/_13sdp"
                    android:paddingRight="@dimen/_10sdp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_weight=".5"
                android:background="@color/white"
                android:elevation="@dimen/_2sdp"
                tools:targetApi="lollipop"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/cityTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableEnd="@drawable/down_arrow"
                    android:drawableTint="@color/grayBorder"
                    android:hint="@string/city"
                    android:paddingStart="@dimen/_13sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/grayBorder"
                    android:textColorHint="@color/grayBorder"
                    android:textCursorDrawable="@color/Mix"
                    android:textSize="@dimen/_14ssp"
                    tools:targetApi="m"
                    android:paddingLeft="@dimen/_13sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:drawableRight="@drawable/down_arrow" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:elevation="@dimen/_2sdp"
        tools:targetApi="lollipop">

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingStart="@dimen/_13sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:selectAllOnFocus="true"
            android:text="@string/signUp"
            android:textColor="@color/OrangeButtonColor"
            android:textColorHint="@color/grayBorder"
            android:textCursorDrawable="@color/Mix"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:paddingLeft="@dimen/_13sdp"
            android:paddingRight="@dimen/_10sdp" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/alreadyAccountTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ellipsize="end"
        android:focusable="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/_3sdp"
        android:paddingStart="@dimen/_13sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="0dp"
        android:text="@string/alreadyAccount"
        android:textColor="@color/LoginAlreadyColor"
        android:textSize="@dimen/_12ssp"
        android:paddingLeft="@dimen/_13sdp"
        android:paddingRight="@dimen/_10sdp" />

</LinearLayout>